# SPL1

./: .gitignore  CMakeLists.txt  exampleIn1.txt  exampleIn2.txt  exampleIn3.txt  makeFiler.py  makefile
include/: Commands.h  Environment.h  FileSystem.h  Files.h  GlobalVariables.h
src/: Commands.cpp  Environment.cpp  FileSystem.cpp  Files.cpp  main.cpp
